--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,29 @@
 cmake_minimum_required(VERSION 3.16)
-project(muduo_study)
+project(mymuduo)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(muduo_study main.cpp)
+set(CXX_FLAGS
+        -g
+        # -DVALGRIND
+        -DCHECK_PTHREAD_RETURN_VALUE
+        -D_FILE_OFFSET_BITS=64
+        -Wall
+        -Wextra
+        -Werror
+        -Wconversion
+        -Wno-unused-parameter
+        -Wold-style-cast
+        -Woverloaded-virtual
+        -Wpointer-arith
+        -Wshadow
+        -Wwrite-strings
+        -march=native
+        # -MMD
+        -std=c++11
+        -rdynamic
+        )
+
+add_subdirectory(base)
+
+add_executable(mymuduo main.cpp)
